--- a/src/app/order-menu-details/order-menu-details.component.scss
+++ b/src/app/order-menu-details/order-menu-details.component.scss
@@ -126,7 +126,7 @@
         &--price {
             display: flex;
             align-items: flex-end;
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
             font-weight: 700;
 
             &-none-delivery {
